[gd_scene load_steps=8 format=2]

[ext_resource path="res://Grid.gd" type="Script" id=1]
[ext_resource path="res://Assets/Alive.png" type="Texture" id=2]
[ext_resource path="res://Camera.gd" type="Script" id=3]
[ext_resource path="res://Assets/Green-Circle.png" type="Texture" id=4]

[sub_resource type="InputEventAction" id=1]
action = "simulate"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="TileSet" id=3]
0/name = "Alive 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Game" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.18918
margin_bottom = -1.18921
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopPanel" type="Panel" parent="CanvasLayer/UI"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 120 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="CanvasLayer/UI/TopPanel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -20.0
margin_right = 84.0
margin_bottom = 20.0
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSim" type="Button" parent="CanvasLayer/UI/TopPanel/Buttons"]
margin_right = 80.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 40 )
shortcut = SubResource( 2 )
text = "Simulate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnOff" type="Control" parent="CanvasLayer/UI/TopPanel/Buttons"]
margin_left = 120.0
margin_right = 120.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 20 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/UI/TopPanel/Buttons/OnOff"]
position = Vector2( 0, 18 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="ButtonStep" type="Button" parent="CanvasLayer/UI/TopPanel/Buttons"]
margin_left = 160.0
margin_right = 240.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 40 )
text = "Step"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonClear" type="Button" parent="CanvasLayer/UI/TopPanel/Buttons"]
margin_left = 280.0
margin_right = 360.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 40 )
text = "Clear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="TileMap" parent="."]
tile_set = SubResource( 3 )
show_collision = true
format = 1
script = ExtResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )
script = ExtResource( 3 )

[connection signal="pressed" from="CanvasLayer/UI/TopPanel/Buttons/ButtonSim" to="Grid" method="_on_ButtonSim_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/TopPanel/Buttons/ButtonStep" to="Grid" method="_on_ButtonStep_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/TopPanel/Buttons/ButtonClear" to="Grid" method="_on_ButtonClear_pressed"]
